--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EARLY DETECTION OF AMD</title>
+
+    <style> 
+        body {
+          background-image: url("img_tree.gif"), url("paper.gif");
+          background-color: #cccccc;
+        }
+    </style>
 </head>
 <body>
     {% include 'navbar.html' %}
